# CPP_GTK_DASHBOARD

./: .gitignore  README.md  com.melodia.launcher.json
src/: melodia_launcher.gresource.xml  meson.build
src/app/: melodia_launcher-application.c
src/app/window/: main-window.ui  melodia_launcher-window.c
src/components/buttons/launcher_button/: launcher_button.c  launcher_button.h  launcher_button.ui
src/features/dashboard/: dashboard.c  dashboard.h  dashboard.ui  melodia_launcher-window.c
src/features/stack_manager/: stack_manager.c  stack_manager.h
src/ui/: dashboard.ui  main-window.ui
src/ui/components/: launcher_button.ui
src/ui/pages/: dashboard.ui  main_window.ui
src/ui/styles/: launcher_button.css
